tests/accept/assignment.ul
int foo(int foo, float y) {
    int x;

    foo = 2;
    x = foo;
    y = x;

    return 3;
}

void main() {
     int x;
     float y;
     y = x;
     x = 3;
     y = 3.4;
     y = 2;
}
