tests/reject/bad_call.ul
string foo(int x) {
    return x;
}

void main() {
  string s;
  s = foo(3.3);
}
